Fix compilation with JDK 11.
We were using a few deprecated functions, which caused warnings, which
were turned into errors thanks to -Werror.

Some of the regression tests are still failing with JDK 11, because they
rely on PowerMock which has trouble with JDK 11. See:
https://github.com/powermock/powermock/issues/864.